[package]
name = "not-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
luminance-front = "0.6.1"
luminance-derive = "0.10.0"
luminance-glutin = "0.14.1"
glutin = "0.28.0"
anyhow = "1.0.57"
luminance = "0.47.0"
cgmath = "0.18.0"
notify = "4.0.17"
